--- a/index.html
+++ b/index.html
@@ -5,39 +5,39 @@
         <link rel="stylesheet" href="style.css" type="text/css">
     </head>
     <body>
-        <h1>Ugly Webby</h1>
-        <div>
-            <h3>Some lorem ipsum.</h3>
-            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Modi consequuntur rem amet. Consequuntur aliquid quam nesciunt dignissimos quaerat. <cite>At quos minus aliquam esse maiores? Autem sunt odio dolores accusamus fugit!<cite></p>
+        <h1>U<span>gl</span>y W<span>eb</span>by</h1>
+        <div class"rbt>
+            <h3 class="rf">Some lorem ipsum.</h3>
+            <p class="box2">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Modi consequuntur rem amet. Consequuntur aliquid quam nesciunt dignissimos quaerat. <cite>At quos minus aliquam esse maiores? Autem sunt odio dolores accusamus fugit!<cite></p>
             <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Minima unde <em>culpa</em> impedit quas iusto ipsam recusandae obcaecati. Eveniet maxime autem blanditiis eos. Veniam alias sapiente error a voluptas voluptate illo.</p>
         </div>
-        <div>
-            <p>The <code>push()</code> method adds one or more elements to the end of an array and returns the new length of the array.</p>
+        <div class="rbt">
+            <p class="box">The <code>push()</code> method adds one or more elements to the end of an array and returns the new length of the array.</p>
         </div>
-        <div>
+        <div class="rbt">
 
             <h3>Some arguments.</h3>
             
             <ul>
                 <li>This is an argument.</li>
-                <li>This is a counterpoint!</li>
+                <li class="big">This is a counterpoint!</li>
                 <li>But holy $#!%, <strong>this</strong> argument blows the other arguments away.</li>
-                <li>The first two arguments are now disproven af.</li>
+                <li class="big">The first two arguments are now disproven af.</li>
             </ul>
         </div>
-        <div>
+        <div class="rbt">
             <h3>How many things are there?</h3>
             <ol>
-                <li>Thing 1.</li>
+                <li class="big">Thing 1.</li>
                 <li>Thing 2.</li>
-                <li>Thing C.</li>
+                <li class="big">Thing C.</li>
                 <li>Thing 4th, the 4th thing.</li>
-                <li>Thing 1 again.</li>
+                <li class="big">Thing 1 again.</li>
             </ol>
         </div>
         <form>
             <input type="text">
-            <input type="text">
+            <input class="ug" type="text">
             <textarea>Someday we'll make forms that do something.</textarea>
             <button type="submit">This is not that day.</button>
         </form>
