--- a/index.html
+++ b/index.html
@@ -2,14 +2,17 @@
 <html>
     <head>
         <title>Ugly Webby</title>
+        <link href="https://fonts.googleapis.com/css?family=Frijole|Press+Start+2P&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="style.css" type="text/css">
+        
     </head>
     <body>
+
         <h1>U<span>gl</span>y W<span>eb</span>by</h1>
         <div class"rbt>
             <h3 class="rf">Some lorem ipsum.</h3>
             <p class="box2">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Modi consequuntur rem amet. Consequuntur aliquid quam nesciunt dignissimos quaerat. <cite>At quos minus aliquam esse maiores? Autem sunt odio dolores accusamus fugit!<cite></p>
-            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Minima unde <em>culpa</em> impedit quas iusto ipsam recusandae obcaecati. Eveniet maxime autem blanditiis eos. Veniam alias sapiente error a voluptas voluptate illo.</p>
+            <p class="box3">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Minima unde <em>culpa</em> impedit quas iusto ipsam recusandae obcaecati. Eveniet maxime autem blanditiis eos. Veniam alias sapiente error a voluptas voluptate illo.</p>
         </div>
         <div class="rbt">
             <p class="box">The <code>push()</code> method adds one or more elements to the end of an array and returns the new length of the array.</p>
@@ -25,8 +28,11 @@
                 <li class="big">The first two arguments are now disproven af.</li>
             </ul>
         </div>
+        <section class="img">
+
+        </section>
         <div class="rbt">
-            <h3>How many things are there?</h3>
+            <h3 class="gf">How many things are there?</h3>
             <ol>
                 <li class="big">Thing 1.</li>
                 <li>Thing 2.</li>
